<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noole.rps.ScoreActivity">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="379dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:text="@string/player_name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/human_score" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ai_score" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>